DHParser Version 0.8.4 (pending)
................................

- lookahead parsers can now be unit-tested


DHParser Version 0.8.3 (20.8.2018)
..................................

- new transformation function collapse_if()
- restored compatibility with Python 3.4
- StepByStep Guide typos fixed
- bug fixes


DHParser Version 0.8.2 (10.7.2018)
..................................

- refactoring of module parser.py for more simplicity. RE is now
  a simple (macro-style) function instead of a class of its own.
  Class Token has been merged with PlainText. Possible break of
  backwards compatibility with certain AST-transformation-tables in
  connection with Token and RE-nodes!


DHParser Version 0.8.1 (2.7.2018)
.................................

- compatibility fixes for Python 3.7


DHParser Version 0.8.0 (24.6.2018)
..................................

- refactoring of error reporting: it is now done centrally through the
  (newly introduced) syntaxtree.RootNode object; makes it faster and easier
- "step by step" guide added to the documentation
- XML is now a first class citizen for serialization next to S-expressions:
  xml serialization can now also be read with syntaxtree.parse_xml() plus
  better serialization with syntaxtree.Node.as_xml()
- added example: XML-Parser
- added optional CST-reporting on a case by case basis to the testing
  framework, using the "*"-marker to indicate which test should add CSTs to
  the report
- moved compilation support to a separate module: compile.py
- source mapping added if preprocessor changes source code
  (see module preprocess.py)
- new semantics for syntaxtree.Node.__str__: now includes error messages;
  use Node.content to retrieve the content without any error messages
- LaTeX-example: better AST-transformations.


DHParser Version 0.7.8 (29.11.2017)
...................................

- added parsers for arbitrarily ordered elements (parser.Unordered class)
- various bug fixes