@@ -1,7 +1,8 @@
 DHParser Version 0.8.4 (pending)
 ................................
 
-- lookahead parsers can now be unit-tested
+- lookahead parsers can now be unit-tested (experimental)
+- customized, i.e. faster deepcopy of syntax trees
 
 
 DHParser Version 0.8.3 (20.8.2018)
